// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> should create style tag at fixed with pseudo-elements 1`] = `
<style>
  
                .after-background-image-test:before,
                .after-background-image-test:after {
                  background-size: cover;
                  content: '';
                  display: block;
                  position: absolute;
                  width: 100%;
                  height: 100%;
                  top: 0;
                  left: 0;
                  transition: opacity 0.25s ease-in-out;
                  -webkit-transition: opacity 0.25s ease-in-out;
                  -moz-transition: opacity 0.25s ease-in-out;
                  -o-transition: opacity 0.25s ease-in-out;
                }
                .after-background-image-test:before {
                  z-index: -101;
                  background-image: url(test_image.jpg);
                  background-repeat: 'repeat-y';
                }
                .after-background-image-test:after {
                  z-index: -100;
                  background-image: url(test_image.jpg);
                  background-repeat: 'repeat-y';
                  content: "";
                  opacity: 0;
                }
              
</style>
`;

exports[`<BackgroundImage /> should create style tag with pseudo-elements 1`] = `
<style>
  
                .after-background-image-test:before,
                .after-background-image-test:after {
                  background-size: cover;
                  content: '';
                  display: block;
                  position: absolute;
                  width: 100%;
                  height: 100%;
                  top: 0;
                  left: 0;
                  transition: opacity 0.25s ease-in-out;
                  -webkit-transition: opacity 0.25s ease-in-out;
                  -moz-transition: opacity 0.25s ease-in-out;
                  -o-transition: opacity 0.25s ease-in-out;
                }
                .after-background-image-test:before {
                  z-index: -101;
                  background-image: url(test_image.jpg);
                  background-repeat: 'repeat-y';
                }
                .after-background-image-test:after {
                  z-index: -100;
                  background-image: url(test_image.jpg);
                  background-repeat: 'repeat-y';
                  content: "";
                  opacity: 0;
                }
              
</style>
`;

exports[`<BackgroundImage /> should render fixed size images 1`] = `
<div>
  <div
    class="fixedImage after-background-image-test gatsby-image-wrapper"
    id="test"
    style="position: relative; overflow: hidden; background-size: cover; z-index: -103; display: inline;"
  >
    <style>
      
                .after-background-image-test:before,
                .after-background-image-test:after {
                  background-size: cover;
                  content: '';
                  display: block;
                  position: absolute;
                  width: 100%;
                  height: 100%;
                  top: 0;
                  left: 0;
                  transition: opacity 0.25s ease-in-out;
                  -webkit-transition: opacity 0.25s ease-in-out;
                  -moz-transition: opacity 0.25s ease-in-out;
                  -o-transition: opacity 0.25s ease-in-out;
                }
                .after-background-image-test:before {
                  z-index: -101;
                  background-image: url(test_image.jpg);
                  background-repeat: no-repeat;
                }
                .after-background-image-test:after {
                  z-index: -100;
                  background-image: url(test_image.jpg);
                  background-repeat: no-repeat;
                  content: "";
                  opacity: 0;
                }
              
    </style>
    <img
      alt=""
      class="placeholder"
      src="string_of_base64"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 1; color: red;"
      title="Title for the image"
    />
    <div
      style="background-size: cover; z-index: -103; width: 100px; opacity: 1; height: 100px;"
      title="Title for the image"
    />
    <picture
      style="display: none;"
    >
      <source
        srcset="some srcSetWebp"
        type="image/webp"
      />
      <source
        srcset="some srcSet"
      />
      <img
        alt="Alt text for the image"
        height="100"
        src="test_image.jpg"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0;"
        title="Title for the image"
        width="100"
      />
    </picture>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" /&gt;&lt;source srcSet="some srcSet" /&gt;&lt;img width="100" height="100" src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render fluid images 1`] = `
<div>
  <div
    class="fixedImage after-background-image-test gatsby-image-wrapper"
    id="test"
    style="position: relative; overflow: hidden; display: inline;"
  >
    <style>
      
                .after-background-image-test:before,
                .after-background-image-test:after {
                  background-size: cover;
                  content: '';
                  display: block;
                  position: absolute;
                  width: 100%;
                  height: 100%;
                  top: 0;
                  left: 0;
                  transition: opacity 0.25s ease-in-out;
                  -webkit-transition: opacity 0.25s ease-in-out;
                  -moz-transition: opacity 0.25s ease-in-out;
                  -o-transition: opacity 0.25s ease-in-out;
                }
                .after-background-image-test:before {
                  z-index: -101;
                  background-image: url(test_image.jpg);
                  background-repeat: no-repeat;
                }
                .after-background-image-test:after {
                  z-index: -100;
                  background-image: url(test_image.jpg);
                  background-repeat: no-repeat;
                  content: "";
                  opacity: 0;
                }
              
    </style>
    <img
      alt=""
      class="placeholder"
      src="string_of_base64"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 1; color: red;"
      title="Title for the image"
    />
    <div
      style="background-size: cover; z-index: -103; opacity: 1;"
      title="Title for the image"
    />
    <picture
      style="display: none;"
    >
      <source
        sizes="(max-width: 600px) 100vw, 600px"
        srcset="some srcSetWebp"
        type="image/webp"
      />
      <source
        sizes="(max-width: 600px) 100vw, 600px"
        srcset="some srcSet"
      />
      <img
        alt="Alt text for the image"
        src="test_image.jpg"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0;"
        title="Title for the image"
      />
    </picture>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with another external class 1`] = `
<div>
  <div
    class="fixedImage test after-background-image-test gatsby-image-wrapper"
    id="test"
    style="position: relative; overflow: hidden; display: inline;"
  >
    <style>
      
                .after-background-image-test:before,
                .after-background-image-test:after {
                  background-size: cover;
                  content: '';
                  display: block;
                  position: absolute;
                  width: 100%;
                  height: 100%;
                  top: 0;
                  left: 0;
                  transition: opacity 0.25s ease-in-out;
                  -webkit-transition: opacity 0.25s ease-in-out;
                  -moz-transition: opacity 0.25s ease-in-out;
                  -o-transition: opacity 0.25s ease-in-out;
                }
                .after-background-image-test:before {
                  z-index: -101;
                  background-image: url(test_image.jpg);
                  background-repeat: 'repeat-y';
                }
                .after-background-image-test:after {
                  z-index: -100;
                  background-image: url(test_image.jpg);
                  background-repeat: 'repeat-y';
                  content: "";
                  opacity: 0;
                }
              
    </style>
    <img
      alt=""
      class="placeholder"
      src="string_of_base64"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 1; color: red;"
      title="Title for the image"
    />
    <div
      style="background-size: cover; z-index: -103; opacity: 1;"
      title="Title for the image"
    />
    <picture
      style="display: none;"
    >
      <source
        sizes="(max-width: 600px) 100vw, 600px"
        srcset="some srcSetWebp"
        type="image/webp"
      />
      <source
        sizes="(max-width: 600px) 100vw, 600px"
        srcset="some srcSet"
      />
      <img
        alt="Alt text for the image"
        src="test_image.jpg"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0;"
        title="Title for the image"
      />
    </picture>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with single external class 1`] = `
<div>
  <div
    class="fixedImage after-background-image-test gatsby-image-wrapper"
    id="test"
    style="position: relative; overflow: hidden; display: inline;"
  >
    <style>
      
                .after-background-image-test:before,
                .after-background-image-test:after {
                  background-size: cover;
                  content: '';
                  display: block;
                  position: absolute;
                  width: 100%;
                  height: 100%;
                  top: 0;
                  left: 0;
                  transition: opacity 0.25s ease-in-out;
                  -webkit-transition: opacity 0.25s ease-in-out;
                  -moz-transition: opacity 0.25s ease-in-out;
                  -o-transition: opacity 0.25s ease-in-out;
                }
                .after-background-image-test:before {
                  z-index: -101;
                  background-image: url(test_image.jpg);
                  background-repeat: no-repeat;
                }
                .after-background-image-test:after {
                  z-index: -100;
                  background-image: url(test_image.jpg);
                  background-repeat: no-repeat;
                  content: "";
                  opacity: 0;
                }
              
    </style>
    <img
      alt=""
      class="placeholder"
      src="string_of_base64"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 1; color: red;"
      title="Title for the image"
    />
    <div
      style="background-size: cover; z-index: -103; opacity: 1;"
      title="Title for the image"
    />
    <picture
      style="display: none;"
    >
      <source
        sizes="(max-width: 600px) 100vw, 600px"
        srcset="some srcSetWebp"
        type="image/webp"
      />
      <source
        sizes="(max-width: 600px) 100vw, 600px"
        srcset="some srcSet"
      />
      <img
        alt="Alt text for the image"
        src="test_image.jpg"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0;"
        title="Title for the image"
      />
    </picture>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;
